--- a/main.css
+++ b/main.css
@@ -32,3 +32,12 @@
     background-color: var(--fifth-color);
     color: wheat;
   }
+
+  .info__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 8px 16px;
+    border: #000000 solid 2px;
+  }
