--- a/main.css
+++ b/main.css
@@ -46,3 +46,8 @@
     font-size: 64px;
     text-align: center;
   }
+
+  .info__header{
+    font-size: var(--font-size-2);
+    margin: 8px 0;
+  }
