--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@
     flex-direction: column;
     align-items: center;
     height: auto;
-    padding: 8px 16px;
+    padding: 16px 16px;
     border: #000000 solid 2px;
   }
 
@@ -49,5 +49,5 @@
 
   .info__header{
     font-size: var(--font-size-2);
-    margin: 8px 0;
+    padding: 8px 0;
   }
