--- a/main.css
+++ b/main.css
@@ -6,5 +6,15 @@
   
   body {
     margin: 0;
+    width: 100%;
+    height: 100%;
   }
 
+  .hero__wrapper{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--background-img) center no-repeat;
+    background-attachment: fixed;
+  }
