--- a/main.css
+++ b/main.css
@@ -18,3 +18,12 @@
     background: var(--background-img) center no-repeat;
     background-attachment: fixed;
   }
+
+  .hero__title{
+    font-family: var(--primary-font);
+    font-size: 2.5rem;
+    background: var(--third-color);
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+  }
