--- a/main.css
+++ b/main.css
@@ -1,29 +1,54 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  .hero__wrapper{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--background-img) center no-repeat;
-    background-attachment: fixed;
-  }
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+/*Ostylowanie tla sekcji hero*/
+.hero__wrapper {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--background-img) center no-repeat;
+  background-attachment: fixed;
+}
+/*Ostylowanie naglowka strony*/
+.hero__title {
+  font-family: var(--primary-font);
+  font-size: 2.5rem;
+  background: var(--third-color);
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*przycisk Zapisu na premiere*/
 
-  .hero__title{
-    font-family: var(--primary-font);
-    font-size: 2.5rem;
-    background: var(--third-color);
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-  }
+.hero__button {
+  display: block;
+  text-align: center;
+  margin-top: 2rem;
+  height: 3rem;
+  line-height: 2rem;
+}
+
+.btn {
+  border-radius: 2px;
+  padding: 6px 12px;
+  height: 4rem;
+  border-radius: 8px;
+  border: solid transparent;
+
+  font-family: var(--secondary-font);
+  font-size: 1.5rem;
+  background-color: var(--primary-color);
+  text-transform: uppercase;
+  cursor: pointer;
+  touch-action: manipulation;
+}
