--- a/main.css
+++ b/main.css
@@ -114,6 +114,17 @@ body {
   font-family: var(--primary-font);
 }
 
+/* Ostylowanie kontenera aboutUs */
+
+.aboutUs {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: var(--fourth-color);
+}
+
+
+
 @media (min-width: 768px) {
   .info {
     flex-direction: row;
