--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ body {
   align-items: center;
   height: auto;
   text-align: center;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 /* Ostylowanie zdjęć */
@@ -177,6 +177,12 @@ body {
 .aboutUs p {
   font-size: 16px;
   font-family: var(--primary-font);
+}
+
+/* Stylowanie sekcji aboutUs__social */
+
+.aboutUs__social {
+  padding-top: 8px;
 }
 
 
