--- a/main.css
+++ b/main.css
@@ -175,7 +175,7 @@ body {
 /* Stylowanie paragrafu */
 
 .aboutUs p {
-  font-size: 16px;
+  font-size: 18px;
   font-family: var(--primary-font);
 }
 
@@ -185,7 +185,25 @@ body {
   padding-top: 8px;
 }
 
+/* Stylowanie ikon social mediów */
 
+.social__facebook, .social__instagram, .social__twitter {
+  padding: 8px;
+  font-size: 32px;
+  display: inline-block;
+}
+
+.social__facebook {
+  color:#3b5998;
+}
+
+.social__instagram {
+  color:#3f729b;
+}
+
+.social__twitter{
+  color:#00acee;
+}
 
 @media (min-width: 768px) {
   .info {
