--- a/main.css
+++ b/main.css
@@ -135,6 +135,11 @@ body {
   padding: 0.5rem;
 }
 
+.content--2, .content--4 {
+  background-color: var(--secondary-color);
+  color: wheat;
+}
+
 /* Ostylowanie zdjęć */
 
 .photo {
@@ -194,16 +199,17 @@ body {
 }
 
 .social__facebook {
-  color:#3b5998;
+  color:#00acee;
 }
 
 .social__instagram {
-  color:#3f729b;
+  color:#3f5f9b;
 }
 
 .social__twitter{
   color:#00acee;
 }
+
 
 @media (min-width: 768px) {
   .info {
