ZE-aboutUs - aktualizacja responsywności sekcji aboutUs

--- a/main.css
+++ b/main.css
@@ -236,6 +236,10 @@ body {
     width: 100%;
 }
 
+  .aboutUs__content {
+    width: 25%;
+  }
+
 @media (min-width: 768px) and (max-width: 835px) {
   .header--4 {
     font-size: 20px;
