--- a/main.css
+++ b/main.css
@@ -144,6 +144,11 @@ body {
   letter-spacing: 4px;
 }
 
+.moreInfo__icon {
+  font-size: 48px;
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .info {
     flex-direction: row;
@@ -162,7 +167,7 @@ body {
   }
 
   /* Sekcja dodatkowe informacje */
-  
+
   .moreInfo {
     display: flex;
     flex-direction: row;
