--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   overflow: hidden;
-  
+  padding-top:32px;
 }
 .moreInfoBox {
   display: flex;
@@ -129,7 +129,7 @@ body {
   padding: 20px;
   width: 100%;
   height: auto;
-  background-color: var(--third-color);
+  
   text-align: center;
   line-height: 32px;
   
@@ -183,7 +183,7 @@ body {
     padding: 20px;
     width: 50%;
     height: auto;
-    background-color: var(--third-color);
+ 
   }
 }
 
