ZE-Dodatkowe - media queries dla moreInfo__wrapper

--- a/main.css
+++ b/main.css
@@ -182,7 +182,7 @@ body {
 
   /* Sekcja dodatkowe informacje */
 
-  .moreInfo {
+  .moreInfo__wrapper {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
