--- a/main.css
+++ b/main.css
@@ -126,6 +126,7 @@ body {
   font-size: var(--font-size-2);
   font-family: var(--primary-font);
   padding: 32px 0;
+  padding-top:80px;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 8px;
