ZE-Hero-2: Zmiana szerokosci hero-button w dla widoku Desktopowego

--- a/main.css
+++ b/main.css
@@ -83,6 +83,7 @@ body {
   border-radius: 2px;
   padding: 6px 12px;
   height: 4rem;
+  width: 12rem;
   border-radius: 8px;
   border: solid transparent;
 
