ZE-Identyfikacja: usuniecie url tla z variables, zmiana --fourth-color

--- a/variables.css
+++ b/variables.css
@@ -2,8 +2,7 @@
     --primary-color:#0e1f14;
     --secondary-color:#274d2c;
     --third-color:#eee;
-    --fourth-color: #c6d7af;
+    --fourth-color: #acc48b;
     --fifth-color:#344f2d;
-    --background-img:url("https://images.unsplash.com/photo-1533321942807-08e4008b2025?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2800&q=80");
     --primary-font:'Lora', 'serif';
     --secondary-font:'Merriweather', 'serif';  }
