--- a/main.css
+++ b/main.css
@@ -167,6 +167,7 @@ body {
   flex-wrap: wrap;
   overflow: hidden;
   padding: 0 10%;
+  background-image: url(Identyfikacja/plant_pattern.jpg);
 }
 .moreInfo__title {
   font-size: var(--font-size-2);
@@ -191,6 +192,7 @@ body {
   height: auto;
   text-align: center;
   line-height:2; 
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .moreInfo__header {
@@ -250,12 +252,13 @@ body {
     flex-wrap: wrap;
     overflow: hidden;
     width:100%;
+    background-image: url(Identyfikacja/plant_pattern.jpg);
   }
 
   .moreInfoBox {
     display: flex;
     align-items: center;
-    
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     width: 50%;
     height: auto;
