--- a/main.css
+++ b/main.css
@@ -306,11 +306,14 @@ body {
     font-size: 20px;
   }
 }
+/**OSTYLOWANIE FORMULARZA*/
 
 .newsletter{
   display: flex;
   flex-direction: column;
-  background-color: salmon;
+  background-image: url(Identyfikacja/background.jpeg); 
+  background-position: center;
+  background-size: cover;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -320,14 +323,30 @@ body {
 .newsletter__title{
   border-bottom: solid var(--primary-color) 1px;
   font-family: var(--primary-font);
+  text-transform: uppercase;
   letter-spacing: 0.2rem;
+  font-weight: bold;
+  font-size: var(--font-size-2);
 }
 
 .newsletter__input{
   display: flex;
   flex-direction: column;
-  max-width: 500px;
+  background-color: rgba(255,255,255,0.8);
+  max-width: 900px;
   padding: 0.5rem;
   
 }
+.newsletter__input > p{
+  padding: 1rem;
+  font-family: var(--secondary-font);
+  font-size: var(--font-size-2);
+}
 
+.btn-default{
+  color: var(--sixth-color);
+  align-self: center;
+  width: 200px;
+  height: 2.5rem;
+  font-size: var(--font-size-2);
+}
