--- a/main.css
+++ b/main.css
@@ -350,3 +350,7 @@ body {
   height: 2.5rem;
   font-size: var(--font-size-2);
 }
+
+input[type="checkbox"]:checked {
+  box-shadow: 0 0 0 2px grey ;
+}
