ZE-AboutUs: Dodanie zdjęcia Pauliny

--- a/main.css
+++ b/main.css
@@ -156,7 +156,7 @@ body {
 }
 
 .photo--2 {
-  background: url();
+  background: url(nasze_zdjecia/PaulinaMalinowska.jpeg);
   background-size: contain;
 }
 
