--- a/main.css
+++ b/main.css
@@ -311,7 +311,7 @@ body {
 .newsletter{
   display: flex;
   flex-direction: column;
-  background-image: url(Identyfikacja/background.jpeg); 
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),url(Identyfikacja/background.jpeg); 
   background-position: center;
   background-size: cover;
   text-align: center;
