--- a/main.css
+++ b/main.css
@@ -318,6 +318,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  padding-top: 4rem;
 }
 
 .newsletter__title{
@@ -327,14 +328,23 @@ body {
   letter-spacing: 0.2rem;
   font-weight: bold;
   font-size: var(--font-size-3);
+  padding:1rem;
 }
 
-.newsletter__input{
+.newsletter__wrapper{
   display: flex;
   flex-direction: column;
   background-color: rgba(255,255,255,0.8);
   max-width: 900px;
   padding: 0.5rem;
+  
+}
+
+.newsletter__input{
+  display: flex;
+  flex-direction: column;
+  max-width: 900px;
+  padding: 0.5rem 4rem;
   
 }
 
@@ -344,9 +354,9 @@ body {
 }
 
 .newsletter__input > p{
-  padding: 0.5rem;
+  padding: 0.2rem;
   font-family: var(--secondary-font);
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-3);
 }
 
 .btn-default{
