--- a/main.css
+++ b/main.css
@@ -317,8 +317,8 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
-  padding-top: 4rem;
+  padding: 4rem 4rem;
+  
 }
 
 .newsletter__title{
@@ -337,6 +337,7 @@ body {
   background-color: rgba(255,255,255,0.8);
   max-width: 900px;
   padding: 0.5rem;
+  border-radius: 2rem;
   
 }
 
@@ -353,10 +354,10 @@ body {
   font-size: var(--font-size-2);
 }
 
-.newsletter__input > p{
-  padding: 0.2rem;
+.newsletter__wrapper > p{
+  padding-top: 1rem;
   font-family: var(--secondary-font);
-  font-size: var(--font-size-3);
+  font-size: var(--font-size-2);
 }
 
 .btn-default{
@@ -366,7 +367,47 @@ body {
   height: 2.5rem;
   font-size: var(--font-size-2);
 }
+/* input[type=checkbox]{
+  display: block;
+  padding:0.2rem;
+  transform:scale(1.4) translateY(12px);
+} */
 
-input[type="checkbox"]:checked {
-  box-shadow: 0 0 0 2px grey ;
+input[type=checkbox] + label{
+  display: block;
+  margin:0.2rem;
+  cursor: pointer;
+  padding:0.2rem;
+  
+}
+input[type=checkbox]{
+  display: none;
+
+}
+input[type=checkbox] + label:before{
+  display:inline-block;
+  background-color: #fff;
+  content:"\2714";
+  border: 0.1rem solid var(--primary-color);
+  border-radius:0.2rem;
+  width:1rem;
+  height:1rem;
+  padding-bottom:0.1rem;
+  margin-right:0.5rem;
+  vertical-align: bottom;
+  color:transparent;
+  transform: translateY(0.4rem);
+  transition:0.1s;
+
+}
+
+input[type=checkbox] + label:active:before{
+  transform:scale(0);
+}
+
+input[type=checkbox]:checked + label:before{
+  background-color: var(--fourth-color);
+  color:var(--primary-color);
+  border-color: var(--primary-color);
+  
 }
