--- a/main.css
+++ b/main.css
@@ -413,3 +413,8 @@ input[type=checkbox]:checked + label:before{
   border-color: var(--primary-color);
   
 }
+
+.newsletter__top__item{
+  color:#fff;
+  font-size: var(--font-size-3);
+}
