position fixed added

--- a/main.css
+++ b/main.css
@@ -19,6 +19,14 @@ body {
   display: flex;
   justify-content: space-around;
 
+  position: fixed;
+  width: 100%;
+  top: 0;
+  height: 64px;
+
+  list-style-type: none;
+  font-size: 2rem;
+
 }
 
 /*Ostylowanie tla sekcji hero*/
