--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
   z-index: 10;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 
   position: fixed;
   width: 100%;
@@ -26,8 +27,20 @@ body {
 
   list-style-type: none;
   font-size: 2rem;
-
+  color: var(--primary-color);
+  background: rgba(255, 255, 255, 0.5);
 }
+
+.link{
+  color: var(--primary-color);
+  text-decoration: none;
+  
+}
+
+ .link:hover{
+   text-decoration: underline;
+   color: var(--third-color);
+  }
 
 /*Ostylowanie tla sekcji hero*/
 .hero__wrapper {
