--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body {
   height: 64px;
 
   list-style-type: none;
-  font-size: 1rem;
+  font-size: var(--font-size-2);
   color: var(--primary-color);
   background: rgba(255, 255, 255, 0.5);
 }
@@ -225,7 +225,7 @@ body {
   }
 
   .menu__list{
-    font-size: 2rem;;
+    font-size: var(--font-size-4);
   }
 
   .info__item {
