ZE-AboutUs - dodano zdjęcie w main.css

--- a/main.css
+++ b/main.css
@@ -151,7 +151,7 @@ body {
 }
 
 .photo--1 {
-  background: url();
+  background: url(nasze_zdjecia/KarinaMiernik.jpeg);
   background-size: contain;
 }
 
